--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -1,5 +1,6 @@
 <h1> Add a gram ! </h1>
 <%= simple_form_for @gram do |f| %>
   <%= f.input :message %>
+  <%= f.input :picture %>
   <%= f.submit "Post !" %>
 <% end %>
