--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-   <% if current_user %>
-    You're signed in as <%= current_user.email %>.
-    <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+   <% if current_grammer %>
+    You're signed in as <%= current_grammer.email %>.
+    <%= link_to "Sign out", destroy_grammer_session_path, method: :delete %>
   <% else %>
-    <%= link_to "Sign In", new_user_session_path %>
-    <%= link_to "Sign Up", new_user_registration_path %>
+    <%= link_to "Sign In", new_grammer_session_path %>
+    <%= link_to "Sign Up", new_grammer_registration_path %>
   <% end %>
   <% if notice.present? %>
     <p class="notice"><%= notice %></p>
